Updated change log.

--- a/releases/0.9.40.xhtml
+++ b/releases/0.9.40.xhtml
@@ -4,7 +4,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 	<head>
-		<title>Lilith 0.9.40</title>
+		<title>Lilith 0.9.40 Release Notes</title>
 		<link href="help.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
@@ -12,7 +12,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 
 		<div>
 		<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/0.9.40">Download Now!
-		<br />(Released: 2010-xx-xx)</a>
+		<br />(Released: 2010-11-11)</a>
 		</div>
 
 		<h2>Changes</h2>
@@ -76,17 +76,19 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/92">Ticket 92</a>)
 			</li>
 			<li>
-				Added default condition name to preferences. It's preselected for every new view.<br />
-				This was suggested by Lothar Cezanne.
+				Added default condition name to preferences. It's preselected for every new view.
+				<br/>This was suggested by Lothar Cezanne.
 			</li>
 			<li>
-				Polling events every 100ms instead of every 2s.<br />
-				This results in less congestion and a much snappier feeling.
+				Polling events every 100ms instead of every 2s.
+				<br/>This results in less congestion and a much snappier feeling.
 			</li>
+			<!--
 			<li>
 				Fixed deployment of site.<br />
 				See <a href="http://sulky.huxhorn.de/projects/">sulky</a> and <a href="http://lilith.huxhorn.de/projects/">lilith</a>.
 			</li>
+			-->
 			<li>
 				Added --export-preferences &lt;file&gt; and --import-preferences &lt;file&gt;
 				commandline options to be able to export and import all preferences.
