Added some praise...

--- a/releases/0.9.40.xhtml
+++ b/releases/0.9.40.xhtml
@@ -148,6 +148,18 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			</li>
 		</ul>
 
+		<h2>Thanks</h2>
+		<p>
+			Sulky and Lilith builds have been switched from Maven to Gradle. pom files
+			are still maintained but mainly because of Sonar.<br/>
+			I'd like to take this opportunity and thank the great Gradle community from
+			the #gradle channel on irc.codehaus.org, especially - but not exclusively! -
+			adam (Adam Murdoch), xlson (Leonard Axelsson) and sebersole (Steve Ebersole).<br/>
+			Thank you very much!<br/>
+			If you haven't taken a look at <a href="http://gradle.org">Gradle</a> yet you should definitely do so now or in
+			the near future...
+		</p>
+		
 		<h2>Previous Versions</h2>
 		<ul>
 			<li><a href="http://lilith.huxhorn.de/releases/0.9.39.xhtml">0.9.39</a></li>
