--- a/lilith/src/main/resources/help/classic-appender.xhtml
+++ b/lilith/src/main/resources/help/classic-appender.xhtml
@@ -13,10 +13,9 @@
 <h1><a name="top">Using the Lilith Classic Socket Appender</a></h1>
 
 <p>The Lilith Classic Socket Appender is a replacement for <code>ch.qos.logback.classic.net.SocketAppender</code>.<br/>
-	This appender, in contrast to logbacks, supports logger.debug("{} {}", new Object[]{foo, bar, throwable), i.e.
-	if the last given parameter of a log message is a Throwable and it is not used up in the message pattern then it
-	will
-	be used as the Throwable of the LoggingEvent, similar to logger.debug(""+foo+" "+bar, throwable).</p>
+	This appender, in contrast to logbacks, supports <code>logger.debug("{} {}", new Object[]{foo, bar, throwable)</code>, i.e.
+	if the last given parameter of a log message is a <code>Throwable</code> and it is not used up in the message pattern then it
+	will be used as the <code>Throwable</code> of the LoggingEvent, similar to <code>logger.debug(""+foo+" "+bar, throwable)</code>.</p>
 
 <p>While LogBACK's appender is stream-based, i.e. it streams logging events using an <code>ObjectOutputStream</code>, the
 	Lilith appender is message based, i.e. it sends logging events one after the other as single messages.</p>
