Added Tip headers. Replaced &nbsp; with &#160;.

--- a/lilith/src/main/resources/tips/0.xhtml
+++ b/lilith/src/main/resources/tips/0.xhtml
@@ -4,12 +4,13 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>0</title>
+	<title>1</title>
 	<link href="tips.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<h3>Tip #1</h3>
 <p>
-	You can save the current condition using ^&nbsp;I.<br/>
+	You can save the current condition using ^&#160;I.<br/>
 	Saved conditions can be configured in the <a href="prefs://Conditions">Conditions preferences</a>.
 </p>
 <p>
