--- a/lilith/src/main/resources/tips/1.xhtml
+++ b/lilith/src/main/resources/tips/1.xhtml
@@ -4,10 +4,11 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>1</title>
+	<title>2</title>
 	<link href="tips.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<h3>Tip #2</h3>
 <p>
 	You can write your own custom filters in <a href="http://groovy.codehaus.org/">Groovy</a>.
 </p>
