--- a/lilith/src/main/resources/tips/3.xhtml
+++ b/lilith/src/main/resources/tips/3.xhtml
@@ -4,12 +4,13 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>3</title>
+	<title>4</title>
 	<link href="tips.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<h3>Tip #4</h3>
 <p>
-	You can remove a currently active condition using ^&nbsp;shift&nbsp;F.
+	You can remove a currently active condition using ^&#160;shift&#160;F.
 </p>
 </body>
 </html>
