--- a/lilith/src/main/resources/tips/4.xhtml
+++ b/lilith/src/main/resources/tips/4.xhtml
@@ -4,13 +4,14 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>4</title>
+	<title>5</title>
 	<link href="tips.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<h3>Tip #5</h3>
 <p>
 	You can find/filter events using conditions.<br/>
-	Use ^&nbsp;F to open the find panel.
+	Use ^&#160;F to open the find panel.
 </p>
 <p>
 	See <a href="help://conditions.xhtml">help</a> for more info...
