--- a/lilith/src/main/resources/tips/5.xhtml
+++ b/lilith/src/main/resources/tips/5.xhtml
@@ -4,12 +4,13 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>5</title>
+	<title>6</title>
 	<link href="tips.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<h3>Tip #6</h3>
 <p>
-	You can quickly remove all inactive views using ^&nbsp;R.
+	You can quickly remove all inactive views using ^&#160;R.
 </p>
 </body>
 </html>
