--- a/lilith/src/main/resources/tips/6.xhtml
+++ b/lilith/src/main/resources/tips/6.xhtml
@@ -4,12 +4,13 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>6</title>
+	<title>7</title>
 	<link href="tips.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<h3>Tip #7</h3>
 <p>
-	You can quickly close all views using ^&nbsp;shift&nbsp;W.
+	You can quickly close all views using ^&#160;shift&#160;W.
 </p>
 </body>
 </html>
