--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -49,9 +49,13 @@
 	-->
 
 	<tr>
-		<td><a href="http://hc.apache.org/httpclient-3.x/">Commons HttpClient</a></td>
-		<td><a href="http://hc.apache.org/httpclient-3.x/license.html">The Apache Software License Version, Version
-			2.0</a></td>
+		<td><a href="http://hc.apache.org/httpcomponents-client-ga/">HttpComponents HttpClient</a></td>
+		<td>The Apache Software License Version, Version 2.0</td>
+	</tr>
+
+	<tr>
+		<td><a href="http://hc.apache.org/httpcomponents-core-ga/">HttpComponents HttpClient</a></td>
+		<td>The Apache Software License Version, Version 2.0</td>
 	</tr>
 
 	<tr>
