Updated ASM homepage.

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -31,8 +31,8 @@
 	</tr>
 
 	<tr>
-		<td><a href="http://asm.objectweb.org/">ASM</a></td>
-		<td><a href="http://asm.objectweb.org/license.html">http://asm.objectweb.org/license.html</a></td>
+		<td><a href="http://asm.ow2.org/">ASM</a></td>
+		<td><a href="http://asm.ow2.org/license.html">http://asm.ow2.org/license.html</a></td>
 	</tr>
 
 	<tr>
