--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -71,7 +71,7 @@
 	</tr>
 
 	<tr>
-		<td><a href="https://xhtmlrenderer.dev.java.net/">Flying Saucer / xhtmlrenderer</a></td>
+		<td><a href="http://code.google.com/p/flying-saucer/">Flying Saucer / xhtmlrenderer</a></td>
 		<td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
 	</tr>
 
