--- a/lilith/src/main/resources/help/knownProblems.xhtml
+++ b/lilith/src/main/resources/help/knownProblems.xhtml
@@ -23,6 +23,17 @@
 		be a brain-issue ;) - enlighten me!
     </li>
 
+	<li>cat and tail are currently still experimental features.
+		<ul>
+			<li>AccessEvent isn't supported, yet.
+				<br/>See <a href="http://jira.qos.ch/browse/LBACCESS-12">LBACCESS-12</a>
+			</li>
+			<li>LoggingEvent isn't fully supported, either.
+				<br/>See <a href="http://jira.qos.ch/browse/LBCLASSIC-257">LBCLASSIC-257</a>
+			</li>
+		</ul>
+	</li>
+
 	<li>Flying Saucer related issues:
 		<ul>
 			<li>Selection in the HTML view is currently somewhat buggy, especially in case of scaled view.
