Added support for cat/tail of Lilith AccessEvent files.

--- a/lilith/src/main/resources/help/knownProblems.xhtml
+++ b/lilith/src/main/resources/help/knownProblems.xhtml
@@ -25,10 +25,12 @@
 
 	<li>cat and tail are currently still experimental features.
 		<ul>
+			<!--
 			<li>AccessEvent isn't supported, yet.
 				<br/>See <a href="http://jira.qos.ch/browse/LBACCESS-12">LBACCESS-12</a>
 			</li>
-			<li>LoggingEvent isn't fully supported, either.
+			-->
+			<li>LoggingEvent isn't fully supported, yet.
 				<br/>See <a href="http://jira.qos.ch/browse/LBCLASSIC-257">LBCLASSIC-257</a>
 			</li>
 		</ul>
