--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -34,6 +34,7 @@
 		</ul>
 	</li>
 	<li><a href="detailsView.xhtml">Customizing details view of event</a></li>
+	<li><a href="clipboardFormatters.xhtml">Customizing Clipboard Formatters</a></li>
 	<li><a href="idea.xhtml">IDEA integration</a></li>
 	<li><a href="faq.xhtml">FAQ</a></li>
 	<li><a href="used-software.xhtml">Used Software</a></li>
