--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -59,6 +59,12 @@
 	</tr>
 
 	<tr>
+		<td><a href="http://commons.apache.org/codec/">Commons Codec</a></td>
+		<td><a href="http://commons.apache.org/codec/license.html">The Apache Software License Version, Version 2.0</a>
+		</td>
+	</tr>
+
+	<tr>
 		<td><a href="http://commons.apache.org/io/">Commons IO</a></td>
 		<td><a href="http://commons.apache.org/io/license.html">The Apache Software License Version, Version 2.0</a>
 		</td>
