Created new class LilithKeyStroke that manages all KeyStrokes used.
This includes validation of the used KeyStrokes which detected some mistakes:
"Close all tabs." is now Ctrl-Shift-Alt W.
"Find previous active match" is now Ctrl L.
"Find next active match" is now Ctrl-Shift L.

--- a/lilith/src/main/resources/help/keyboard.xhtml
+++ b/lilith/src/main/resources/help/keyboard.xhtml
@@ -106,6 +106,11 @@
 		The unfiltered tab is not closeable.
 	</dd>
 
+	<dt>^&#8679;Alt W</dt>
+	<dd>Close all tabs.<br/>
+		The unfiltered tab is not closeable.
+	</dd>
+
 	<dt>^ J</dt>
 	<dd>Select previous tab.</dd>
 
@@ -120,12 +125,20 @@
 	<dt>^ F</dt>
 	<dd>Show find panel and focus find textfield.</dd>
 
+	<dt>^&#8679; F</dt>
+	<dd>Reset find.</dd>
+
 	<dt>^ G</dt>
 	<dd>Find previous match.</dd>
 
 	<dt>^&#8679; G</dt>
 	<dd>Find next match.</dd>
 
+	<dt>^ L</dt>
+	<dd>Find previous match of any active condition.</dd>
+
+	<dt>^&#8679; L</dt>
+	<dd>Find next match of any active condition.</dd>
 <!--
 	<dt>???</dt>
 	<dd>Cancel find operation.</dd>
