--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -82,7 +82,7 @@
 	</tr>
 
 	<tr>
-		<td><a href="http://jackson.codehaus.org/">Jackson JSON processor</a></td>
+		<td><a href="http://wiki.fasterxml.com/JacksonHome">Jackson JSON processor</a></td>
 		<td><a href="http://www.apache.org/licenses/LICENSE-2.0.html">The Apache Software License Version, Version 2.0</a><br/>
 			<a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a><br/>
 			(you decide, dual-licensed)
