--- a/lilith/src/main/resources/tips/0.xhtml
+++ b/lilith/src/main/resources/tips/0.xhtml
@@ -9,12 +9,10 @@
 </head>
 <body>
 <h3>Tip #1</h3>
-<p>
-	You can save the current condition using ^&#160;I.<br/>
-	Saved conditions can be configured in the <a href="prefs://Conditions">Conditions preferences</a>.
-</p>
-<p>
-	See <a href="help://conditions.xhtml#saved">help</a> for more info...
-</p>
+<p>You can find/filter events using conditions.</p>
+<p>Use ^&#160;F to open the find panel.<br/>
+Use ^&#160;G to find previous and ^&#160;shift&#160;G to find next matching event.</p>
+
+<p>See <a href="help://conditions.xhtml">help</a> for more info...</p>
 </body>
 </html>
