--- a/lilith/src/main/resources/tips/1.xhtml
+++ b/lilith/src/main/resources/tips/1.xhtml
@@ -10,10 +10,9 @@
 <body>
 <h3>Tip #2</h3>
 <p>
-	You can write your own custom filters in <a href="http://groovy.codehaus.org/">Groovy</a>.
+	You can save the current condition using ^&#160;I.<br/>
+	Saved conditions can be configured in the <a href="prefs://Conditions">Conditions preferences</a>.
 </p>
-<p>
-	See <a href="help://conditions.xhtml#groovy">help</a> for more info...
-</p>
+<p>See <a href="help://conditions.xhtml#saved">help</a> for more info...</p>
 </body>
 </html>
