--- a/lilith/src/main/resources/tips/2.xhtml
+++ b/lilith/src/main/resources/tips/2.xhtml
@@ -9,12 +9,7 @@
 </head>
 <body>
 <h3>Tip #3</h3>
-<p>
-	You can name a source using ^&#160;B.<br/>
-	Named sources can be configured in <a href="prefs://Sources">Sources preferences</a>.
-</p>
-<p>
-	See <a href="help://sources.xhtml#sourceNames">help</a> for more info...
-</p>
+<p>Have you seen "Focus" and "Exclude" in the "Search" and popup menu?</p>
+<p>You should check them out.<br/>They are your friends.</p>
 </body>
 </html>
