--- a/lilith/src/main/resources/tips/3.xhtml
+++ b/lilith/src/main/resources/tips/3.xhtml
@@ -9,8 +9,7 @@
 </head>
 <body>
 <h3>Tip #4</h3>
-<p>
-	You can remove a currently active condition using ^&#160;shift&#160;F.
-</p>
+<p>You can write your own custom conditions in <a href="http://groovy.codehaus.org/">Groovy</a>.</p>
+<p>See <a href="help://conditions.xhtml#groovy">help</a> for more info...</p>
 </body>
 </html>
