--- a/lilith/src/main/resources/tips/5.xhtml
+++ b/lilith/src/main/resources/tips/5.xhtml
@@ -9,8 +9,6 @@
 </head>
 <body>
 <h3>Tip #6</h3>
-<p>
-	You can quickly remove all inactive views using ^&#160;R.
-</p>
+<p>You can quickly remove all inactive views using ^&#160;R.</p>
 </body>
 </html>
