--- a/lilith/src/main/resources/tips/6.xhtml
+++ b/lilith/src/main/resources/tips/6.xhtml
@@ -9,8 +9,6 @@
 </head>
 <body>
 <h3>Tip #7</h3>
-<p>
-	You can quickly close all views using ^&#160;shift&#160;W.
-</p>
+<p>You can quickly close all views using ^&#160;shift&#160;alt&#160;W.</p>
 </body>
 </html>
