--- a/lilith/src/main/resources/tips/4.xhtml
+++ b/lilith/src/main/resources/tips/4.xhtml
@@ -9,12 +9,6 @@
 </head>
 <body>
 <h3>Tip #5</h3>
-<p>
-	You can find/filter events using conditions.<br/>
-	Use ^&#160;F to open the find panel.
-</p>
-<p>
-	See <a href="help://conditions.xhtml">help</a> for more info...
-</p>
+<p>You can quickly remove the currently active condition using ^&#160;shift&#160;F.</p>
 </body>
 </html>
