Added two Substance look&feels.

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -176,6 +176,10 @@
 		<td><a href="http://stax.codehaus.org/">STAX</a></td>
 		<td><a href="http://www.apache.org/licenses/">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
+	<tr>
+		<td><a href="http://insubstantial.github.io/insubstantial/">Insubstantial fork of Substance</a></td>
+		<td><a href="http://www.opensource.org/licenses/bsd-license.php">The BSD 2-Clause License</a></td>
+	</tr>
 
 	<tr>
 		<td><a href="http://tango.freedesktop.org/">Tango Desktop Project</a></td>
