--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -169,8 +169,8 @@
 		<td><a href="http://www.opensource.org/licenses/bsd-license.php">New BSD License</a></td>
 	</tr>
 	<tr>
-		<td><a href="https://rrd4j.dev.java.net/">RRD4J</a></td>
-		<td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
+		<td><a href="http://code.google.com/p/rrd4j/">RRD4J</a></td>
+		<td><a href="http://www.apache.org/licenses/">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
 	<tr>
 		<td><a href="http://stax.codehaus.org/">STAX</a></td>
