processResources enhancements. 'clean' not necessary anymore.
See http://forums.gradle.org/gradle/topics/1_7_rc_1_probably_erroneous_including_duplicate_file_warnings

--- a/lilith/src/main/resources/help/classic-appender.xhtml
+++ b/lilith/src/main/resources/help/classic-appender.xhtml
@@ -45,7 +45,7 @@
 		<pre><code><![CDATA[<dependency>
   <groupId>de.huxhorn.lilith</groupId>
   <artifactId>de.huxhorn.lilith.logback.appender.multiplex-classic</artifactId>
-  <version>${pom.version}</version>
+  <version>${lilithVersion}</version>
   <scope>runtime</scope>
 </dependency>]]></code></pre>
 
@@ -112,7 +112,7 @@
 		<pre><code><![CDATA[<dependency>
   <groupId>de.huxhorn.lilith</groupId>
   <artifactId>de.huxhorn.lilith.logback.appender.multiplex-classic-xml</artifactId>
-  <version>${pom.version}</version>
+  <version>${lilithVersion}</version>
   <scope>runtime</scope>
 </dependency>]]></code></pre>
 
@@ -179,7 +179,7 @@
 		<pre><code><![CDATA[<dependency>
   <groupId>de.huxhorn.lilith</groupId>
   <artifactId>de.huxhorn.lilith.logback.appender.multiplex-classic-json</artifactId>
-  <version>${pom.version}</version>
+  <version>${lilithVersion}</version>
   <scope>runtime</scope>
 </dependency>]]></code></pre>
 
@@ -259,7 +259,7 @@ Lilith listens for connections of the Logback SocketAppender on port 4560.
 		<pre><code><![CDATA[<dependency>
   <groupId>de.huxhorn.lilith</groupId>
   <artifactId>de.huxhorn.lilith.logback.servlet</artifactId>
-  <version>${pom.version}</version>
+  <version>${lilithVersion}</version>
   <scope>runtime</scope>
 </dependency>]]></code></pre>
 
