--- a/lilith/src/main/resources/help/file-appender.xhtml
+++ b/lilith/src/main/resources/help/file-appender.xhtml
@@ -20,7 +20,7 @@
 		<pre><code><![CDATA[<dependency>
   <groupId>de.huxhorn.lilith</groupId>
   <artifactId>de.huxhorn.lilith.logback.encoder.classic</artifactId>
-  <version>${pom.version}</version>
+  <version>${lilithVersion}</version>
   <scope>runtime</scope>
 </dependency>]]></code></pre>
 
