Mentioning sulky SafeString fix and new joda-time dependency.

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -146,6 +146,10 @@
 		<td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
 	</tr>
 	<tr>
+		<td><a href="http://www.joda.org/joda-time/">Joda-Time</a></td>
+		<td><a href="http://www.joda.org/joda-time/license.html">The Apache Software License Version, Version 2.0</a></td>
+	</tr>
+	<tr>
 		<td><a href="http://www.junit.org/">JUnit</a></td>
 		<td><a href="http://junit.sourceforge.net/cpl-v10.html">Common Public License - v 1.0</a></td>
 	</tr>
